added plotting functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,14 +17,16 @@ export(plot_thresholds)
 export(sliding_window)
 export(sliding_window_parallel)
 export(split_fastq)
+export(tecat_plot)
 export(telo_search)
 export(telomere_matching)
 export(telomere_motif)
-export(truncate_files)
+export(truncate_file)
 export(truncation)
 import(Biostrings)
 import(cowplot)
 import(doSNOW)
+import(extrafont)
 import(foreach)
 import(ggplot2)
 import(memes)
